# limmpca

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  convert_id.py  lmm_pca.py  pyproject.toml  requirements.txt  test_original_data.py  util.py
.github/workflows/: test_and_coverage.yml
limmpca/: bootstrap.py  mixedmodel.py  model.py  plot_model_effect.py  util.py
limmpca/test/: make_data.py  model_test.py  util_test.py
limmpca/test/data/: Candies.tsv
original/limmpca/: bootstrap.py  util.py
original/limmpca/test/: test_model.py  test_util.py  utils.py
scripts/: lmm_pca.py  plot_model_effect.py  pointcheck_original_data.py  test_original_data.py
scripts/limmpca/: model.py
scripts/limmpca/test/: make_data.py
