[tool.poetry]
name = "limmpca"
version = "0.1.0"
description = "Combining ASCA+ and linear mixed models to analyse high‐dimensional designed data"
authors = ["Hao-Ting Wang <htwangtw@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.20.2"
pandas = "^1.2.3"
statsmodels = "^0.12.2"
scipy = "^1.6.2"
matplotlib = "^3.4.0"
scikit-learn = "^0.24.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^20.8b1"
ipython = "^7.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']